Version 0.88 - 25 February 2010

- rename wacom driver package to its current name
- remove obsoleted video drivers from video driver list, add some new ones

Version 0.87 - 9 February 2010

- XFdrake:
  o use -X option for ldconfig when switching alternatives, we only need the
    cache rebuilt (Anssi Hannula)
  o do not disable Composite extension by default when using fglrx driver
    (Anssi Hannula)
  o do not disable loading of dri module for non-glx drivers, as KMS drivers
    require it as well
  o do not disable loading of glx module for fbdev, in order to allow AIGLX
    to work in software rasterizer mode
  o do not add dbe and extmod modules to xorg.conf anymore, they are loaded
    by default anyway

Version 0.86 - 26 November 2009

- keyboarddrake:
    o make sure to properly init the console keymap before dumping it during
      initial configuration, should fix console keymap setting in finish-install

Version 0.85 - 22 October 2009

- mousedrake:
    o fix input module path on 64 bit machines
    o don't install input drivers if X isn't here
- XFdrake:
    o enable ctrl+alt+backspace by default

Version 0.84 - 9 October 2009

- run ldconfig after update-alternatives during installer too
  (psb alternative does not have a higher priority than standard
   alternative, and ldconfig was run by the installer only before
   manually setting the alternative, which was not enough)

Version 0.83 - 8 October 2009

- use 28.8kHz as lower HorizSync (for 800x480)

Version 0.82 - 23 September 2009

- don't consider xorg.conf files with no InputDevice sections as invalid, fixes   bug reported on cooker mailing list

Version 0.81 - 23 September 2009

- add psb driver support (for Poulsbo chipset)

Version 0.80 - 22 September 2009

- XFdrake:
  o don't write sections in xorg.conf for USB wacom tablets, Synaptics
    touchpads, mouses using "evdev" or "mouse" and keyboards

Version 0.79 - 14 September 2009

- XFdrake: 